Implemented Dijkstra algorithm and made the webpage dynamic by dom manipulation

--- a/instructions.html
+++ b/instructions.html
@@ -14,6 +14,8 @@
         flex-direction: column;
         align-items: center;
         overflow-y: scroll;
+        background-color: #333;
+        color: white;
       }
       .inline {
         background-color: #333;
@@ -45,7 +47,7 @@
     <title>Instructions | Shortest Path Using Dijkstra Algo</title>
   </head>
   <body>
-    <header>
+    <header style="height: 21vh; display: flex;justify-content: center;align-items: center;">
       <div class="title">
         <a href="index.html">Shortest Path Finder</a>
       </div>
@@ -73,6 +75,6 @@
         </li>
       </ul>
     </main>
-    <a href="index.html" class="continue-link">Continue ></a>
+    <a href="index.html" style="color: white;" class="continue-link">Continue ></a>
   </body>
 </html>
