--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
   <script src="./gsap.js"></script>
-  <script src="./script.js"></script>
+  <script src="./algorithmImplementation.js"></script>
 </body>
 
 </html>
