--- a/instructions.html
+++ b/instructions.html
@@ -14,7 +14,7 @@
         flex-direction: column;
         align-items: center;
         overflow-y: scroll;
-        background-color: #333;
+        background-color: #161414;
         color: white;
       }
       .inline {
@@ -38,10 +38,10 @@
         letter-spacing: 1px;
         text-decoration: none;
         color: #333;
-        border: 2px solid #10a881;
+        border: 2px solid #6b2c88;
       }
       .continue-link:active {
-        color: #10a881;
+        color: #6b2c88;
       }
     </style>
     <title>Instructions | Shortest Path Using Dijkstra Algo</title>
