Text changed in instruction.html

--- a/instructions.html
+++ b/instructions.html
@@ -57,21 +57,21 @@
     <main>
       <h3>Instructions</h3>
       <ul>
-        <li>Click anywhere on the screen to create a node.</li>
-        <li>After you finished adding nodes, start adding edges.</li>
-        <li>Click button "Add edges" before adding edges.</li>
-        <li>Edges can be added by clicking one node and then other node.</li>
-        <li>All edges have default weight scaled to the size between them.</li>
+        <li>Click anywhere on the screen to create a station.</li>
+        <li>After you finished adding stations, start adding routes.</li>
+        <li>Click button "Add routes" before adding routes.</li>
+        <li>Routes can be added by clicking one station and then another station.</li>
+        <li>All routes' have default weight scaled to the size between them.</li>
         <li>
           You can click on the existing weight and change it according to the
           need.
         </li>
         <li>
-          Enter the source vertex in input box and click "Run" to find minimum
+          Enter the <span style="font-weight: 400;">Initial station</span> in input box and click "Go" to find minimum
           cost path.
         </li>
         <li>
-          Before clicking run, make sure all weights are as you need them to be.
+          Before clicking Go, make sure all weights are as you need them to be.
         </li>
       </ul>
     </main>
